<resources>
    <string name="app_name">Bay</string>
    <string-array name="category_items">
        <item>កសិករ</item>
        <item>អ្នកលក់</item>
        <item>សិស្ស</item>
        <item>ផ្សេងៗ</item>
    </string-array>
    <string-array name="filter_options">
        <item>ទាំងអស់</item>
        <item>ដី និង ជីកំប៉ុស</item>
        <item>ការគ្រប់គ្រងសត្វល្អិតធម្មជាតិ</item>
        <item>ការគ្រប់គ្រងទឹក</item>
        <item>គ្រាប់ពូជ និង ផែនការ</item>
        <item>ឧបករណ៍ និង សម្ភារៈ</item>
        <item>ការធ្វើផែនការកសិកម្ម</item>
    </string-array>
    <string name="save_card">រក្សាទុក</string>
    <string name="unsave_card">ដកចេញ</string>
    <string name="saved_success">បានរក្សាទុករួចហើយ</string>
    <string name="unsaved_success">បានដកចេញពីការរក្សាទុកហើយ</string>
    <string name="error_opening_card">មានបញ្ហា ពេលបើកកាត</string>
    <string name="cannot_open_card">មិនអាចបើកកាតបានទេ</string>
    <string-array name="farm_category_options">
        <item>កសិដ្ឋាន</item>
        <item>អង្គការ</item>
        <item>ទីផ្សារ</item>
        <item>អ្នកផ្គត់ផ្គង់</item>
    </string-array>
    <string name="hello_blank_fragment">ទំព័រថ្មី</string>
    <string name="back">ត្រឡប់ក្រោយ</string>
    <string name="todo">កំពុងអភិវឌ្ឍ</string>
    <string name="str_7e833b07">ដាក់ស្នើរ</string>
    <string name="str_1fadb68a">ស្វាយ</string>
    <string name="str_e3ba3029">ព័ត៌មានលម្អិតបន្ថែម</string>
    <string name="str_87e2afa8">គីឡូក្រាម</string>
    <string name="str_3e0429b2">ក្នុងមួយ</string>
    <string name="str_3000">3000</string>
    <string name="str_7a1bb661">តំលៃ</string>
    <string name="str_799f6b36">ជ្រើសរើសប្រភេទ</string>
    <string name="str_f6639d4f">ប្រភេទ</string>
    <string name="str_20543ab4">ឈ្មោះ ទំនិញ / សេវាកម្ម</string>
    <string name="str_08809faf">បញ្ចូលរូបភាព</string>
    <string name="str_4c2fcfeb">គំរូប</string>
    <string name="str_fb4dba30">រូបភាព ទំនិញ / សេវាកម្ម</string>
    <string name="str_c7530bf3">ត្រឡប់</string>
    <string name="str_518f2f6d">ចុះឈ្មោះ</string>
    <string name="str_dc7d5aea">មិនទាន់មានគណនី?</string>
    <string name="phone">Phone</string>
    <string name="google">Google</string>
    <string name="str_39ab31fd">បន្តជាមួយ</string>
    <string name="str_cde892cf">ចូលប្រើ</string>
    <string name="str_aa4044ed">លេខសម្ងាត់មិនត្រឹមត្រូវ!</string>
    <string name="str_3de030c7">ភ្លេចពាក្យសម្ងាត់?</string>
    <string name="str_e4f644ee">លេខសម្ងាត់</string>
    <string name="str_e5178d83">អុីមែល</string>
    <string name="n">សូមស្វាគមន៍ការត្រឡប់មកវិញ!\nរីករាយដែលបានជួបអ្នកម្តងទៀត!</string>
    <string name="str_cfc3fcc9">កំពុងផ្ទុក...</string>
    <string name="str_87c82082">ផ្ញើរលេខផ្ទៀងផ្ទាត់</string>
    <string name="str_45da4e70">លេខទូរស័ព្ទ</string>
    <string name="n_2">បញ្ចូលលេខទូរស័ព្ទ \nដើម្បីចាប់ផ្តើម!</string>
    <string name="str_6f17adc6">ផ្ទៀងផ្ទាត់</string>
    <string name="str_42794756">ផ្ញើម្តងទៀត</string>
    <string name="str_23fde7c0">មិនបានទទួលសារ?</string>
    <string name="str_3a6e4283">លេខកូដមិនមិនត្រឹមត្រូវ!</string>
    <string name="otp">បញ្ចូលលេខផ្ទៀងផ្ទាត់ (OTP)</string>
    <string name="str_b0062aed">មានគណនីរួចហើយ?</string>
    <string name="str_3ed9d9a6">បញ្ជាក់លេខសម្ងាត់</string>
    <string name="str_a0d661ff">ឈ្មោះ</string>
    <string name="str_62366bcd">នាម ត្រកូល</string>
    <string name="n_3">រីករាយដែលបានជួបអ្នក!\nតោះ ចុះឈ្មោះដើម្បីចាប់ផ្តើម!!</string>
    <string name="str_368e3205">រួចរាល់</string>
    <string name="str_ad717162">ប្រាប់ពួកយើងអំពីអ្នក</string>
    <string name="str_8b44ba22">នាម ខ្លួន</string>
    <string name="str_7ac1f28f">បញ្ចូលព័ត៌មានមិនត្រឹមត្រូវ!</string>
    <string name="str_749cf7c5">( អាចរំលងបាន )</string>
    <string name="str_458267d5">រូបភាព</string>
    <string name="n_4">បំពេញ ព័ត៌មានផ្ទាល់ខ្លន\nដើម្បីបន្ត!</string>
    <string name="str_eae6ad70">ផ្ញើរសារផ្ទៀងផ្ទាត់</string>
    <string name="n_5">ភ្លេចលេខសម្ងាត់?\nស្តារលេខសម្ងាត់របស់អ្នក ឥឡូវនេះ!</string>
    <string name="str_7612b2b9">ជ្រើសរើសទីតាំងរបស់អ្នក</string>
    <string name="str_5a71152c">ស្វែងរកទីតាំង...</string>
    <string name="str_b62d65d4">ស្វែងរកទីតាំង</string>
    <string name="n_n">គឺជាប្រព័ន្ធអេកូឡូស៊ីឌីជីថល ដែលនាំមកនូវបច្ចេកវិទ្យា ហិរញ្ញវត្ថុ និងចំណេះដឹង\n ដើម្បីកសាងវិស័យកសិកម្មទំនើប ប្រកបដោយនិរន្តរភាព និងប្រាក់ចំណេញខ្ពស់។\n</string>
    <string name="str_1e97996c">ដៃគូឌីជីថលសម្រាប់កសិករខ្មែរ! </string>
    <string name="str_75b0cbcb">ចាប់ផ្តើម</string>
    <string name="str_b4704ed4">ទទួលបានចំណេះដឹងថ្មី គន្លឺះពីអ្នកជំនាញ នឹងមគ្គុទេស៍ដាំដុះលម្អិតតាម\nដំណាក់កាល
ដើម្បីបង្កើនទិន្នផល នឹងគុណភាពដំណាំរបស់អ្នក</string>
    <string name="str_f91015e3">ដាំដុះដោយភាពឆ្លាតវៃ</string>
    <string name="str_5637137b">បន្ទាប់</string>
    <string name="n_n_2">ទទួលបានការព្យាករណ៍អាកាសធាតុជាក់លាក់ក្នុងតំបន់\nនិងការជូនដំណឹងជាបន្ទាន់អំពីគ្រោះទឹកជំនន់ ឬគ្រោះរាំងស្ងួត ដើម្បីត្រៀមខ្លួនទប់ទល់\nនិងកាត់បន្ថយការខូចខាត។</string>
    <string name="str_d4775a76">ការពារដំណាំរបស់អ្នក!</string>
    <string name="n_n_3">ភ្ជាប់ទំនាក់ទំនងដោយផ្ទាល់ជាមួយអ្នកទិញ ទទួលបានតម្លៃទីផ្សារល្អបំផុត\nនិងកាត់បន្ថយការចំណាយលើឈ្មួញកណ្តាល។\n</string>
    <string name="str_a4c97587">លក់ដោយផ្ទាល់ </string>
    <string name="str_dccfec76">រំលង</string>
    <string name="str_d887ce00">ត្រឡប់ទៅកាន់ទំព័រដើម</string>
    <string name="str_86f9a17c">សូមឆែកមើលប្រអប់សាររបស់អ្នក!</string>
    <string name="n_6">ពួកយើងបានផ្ញើសារ\nទៅកាន់អ្នករួចរាល់ហើយ!</string>
    <string name="this_is_the_body_the_height_is_manually_forced_to_300dp">This is the body. The height is manually forced to 300dp.</string>
    <string name="large_notification_showing_a_title_and_a_body">Large notification, showing a title and a body.</string>
    <string name="str_62d48446">កសិដ្ឋាន / ផ្សារ របស់អ្នក</string>
    <string name="str_6919b732">បង្កើត កសិដ្ឋាន / ផ្សារថ្មី</string>
    <string name="str_72d288df">ទីតាំងកសិដ្ឋាន</string>
    <string name="str_ec2a7350">យល់ព្រម</string>
    <string name="str_d3365360">ចូលគណនី</string>
    <string name="str_0b9a8658">បង្កើតថ្មី</string>
    <string name="str_71011e50">ភ្ជាប់ទំនាក់ទំនងដោយផ្ទាល់ជាមួយអ្នកទិញ ទទួលបានតម្លៃទីផ្សារល្អបំផុត\nនិងកាត់បន្ថយការចំណាយលើឈ្មួញកណ្តាល។</string>
    <string name="next_image">Next image</string>
    <string name="previous_image">Previous image</string>
    <string name="close">Close</string>
    <string name="str_1_5">1 / 5</string>
    <string name="fullscreen_image">Fullscreen image</string>
    <string name="app">App យើងតូចតែបេះដូងយើងធំ!!</string>
    <string name="app_2">App យើងបង្កើតឡើងដើម្បីកសិករកម្ពុជា!!</string>
    <string name="n_7">បញ្ចូលលេខទូរស័ព្ទរបស់អ្នក \nដើម្បីភ្ជាប់!!</string>
    <string name="str_79ea7969">ស្រដៀងគ្នា</string>
    <string name="full_content_goes_here">Full content goes here...</string>
    <string name="title">Title</string>
    <string name="str_b2ea328d">បន្ទាប់ពីប្ដូរឈ្មោះនេះ អ្នកអាចប្ដូរឈ្មោះម្តងទៀតបានក្រោយ 60 ថ្ងៃ។</string>
    <string name="str_28cea22c">គោត្តនាម</string>
    <string name="str_804dec10">នាម</string>
    <string name="str_da38eacc">ប្ដូរឈ្មោះ\nសូមបញ្ចូលឈ្មោះថ្មីរបស់អ្នក</string>
    <string name="str_a7ce91b6">សូមពិនិត្យមើលអ៊ីមែលរបស់អ្នកឲ្យបានត្រឹមត្រូវ!!</string>
    <string name="str_e7b5d793">ប្ដូរអ៊ីមែល</string>
    <string name="str_1b4f8eb5">ផ្ទៀងផ្ទាត់អ៊ីមែល ឬ\nផ្លាស់ប្តូរអ៊ីមែលរបស់អ្នក</string>
    <string name="str_c5ec566e">សូមពិនិត្យមើលលេខទូរស័ព្ទរបស់អ្នកឲ្យបានត្រឹមត្រូវ!!</string>
    <string name="str_2ec5f8e6">ប្ដូរលេខទូរស័ព្ទ</string>
    <string name="str_a21315f1">ផ្ទៀងផ្ទាត់លេខទូរស័ព្ទ ឬ\nផ្លាស់ប្តូរលេខទូរស័ព្ទរបស់អ្នក</string>
    <string name="str_7128d51d">ស្វែងរក ...</string>
    <string name="str_457715dc">តោះចែករំលែកបទពិសោធន៍របស់ ឥឡូវនេះ!!</string>
    <string name="str_61d3d418">មិនមានការបង្ហោះទេ!!</string>
    <string name="str_c567e4a7">ការផ្សព្វផ្សាយរបស់អ្នក</string>
    <string name="str_3a32e70c">ផ្ញើសារ</string>
    <string name="str_61c5bfe8">មើលទំនិញរបស់គាត់</string>
    <string name="tallinn_estonia">Tallinn, Estonia</string>
    <string name="str_9deb1915">កសិករផលិតស្រូវ ឬអ្នកស្រែ ( និយមធ្វើស្រូវវស្សាលើផ្ទៃដីទំនាប និងមានាការងារផ្សេងទៀតដូចជា៖ ចិញ្ចឹមសត្វ ឡើងត្នោត ចំណាកស្រុកតាមរដូវទៅកាន់ទីប្រជុំជន ឬទីក្រុងដើម្បីរកការងារធ្វើ</string>
    <string name="str_211f77e4">អ្នកប្រើប្រាស់</string>
    <string name="str_3d0a13f6">កែប្រែ</string>
    <string name="settings">Settings</string>
    <string name="str_4adc193b">ការបង្ហោះ</string>
    <string name="str_7132b67a">មើលច្រើនទៀត</string>
    <string name="str_95f87d28">អ្នកប្រើប្រាស់ផ្សេងទៀត</string>
    <string name="str_7f7f3330">ភ្លេចលេខសម្ងាត់?</string>
    <string name="n_8">ដើម្បីផ្លាស់ប្តូរប្ដូរឈ្មោះ!!\nសូមបញ្ចូលលេខសម្ងាត់របស់អ្នក</string>
    <string name="str_be181820">ចុចលើលេខទូរស័ព្ទនៅលើទំព័រព័ត៌មានទីតាំង វានឹងបើកកម្មវិធីទូរស័ព្ទរបស់អ្នកដោយស្វ័យប្រវត្តិ។</string>
    <string name="str_258ba661">តើរបៀបដំណើរការទំនាក់ទំនងតាមទូរស័ព្ទ?</string>
    <string name="str_9ecd8e39">ប្រើប៊ូតុងតម្រងនៅលើផែនទី ហើយជ្រើសរើស \'ផ្សារ\' ដើម្បីមើលតែទីតាំងផ្សារទាំងអស់។</string>
    <string name="str_134234e1">តើខ្ញុំអាចរកទីតាំងផ្សារបានយ៉ាងដូចម្តេច?</string>
    <string name="str_5766a6bc">កម្មវិធីយើងគាំទ្រភាសាខ្មែរ និងភាសាអង់គ្លេស។ វាប្តូរភាសាដោយស្វ័យប្រវត្តិតាមការកំណត់ទូរស័ព្ទរបស់អ្នក។</string>
    <string name="str_3713174a">តើកម្មវិធីគាំទ្រភាសាអ្វីខ្លះ?</string>
    <string name="str_ea2f2b3a">ចុចលើទីតាំងនៅលើផែនទី បន្ទាប់មកចុចលើប៊ូតុង \'សារ\' ដើម្បីផ្ញើសារទៅកាន់អ្នកលក់។</string>
    <string name="str_2d25ae4f">តើខ្ញុំអាចទំនាក់ទំនងអ្នកលក់ដោយរបៀបណា?</string>
    <string name="str_b488b3a8">បាទ/ចាស កម្មវិធីយើងមានគ្រប់គ្រាន់ហើយ និងត្រូវបានគាំទ្រដោយការផ្សព្វផ្សាយផ្សេងៗ។</string>
    <string name="str_a1d202e4">តើកម្មវិធីនេះមានគ្រប់គ្រាន់ទេ?</string>
    <string name="str_3c9370cb">អ្នកអាចចុចលើប៊ូតុង \'+\' នៅលើផែនទី ហើយបំពេញព័ត៌មានអំពីកសិដ្ឋានរបស់អ្នក។</string>
    <string name="str_f981923f">តើខ្ញុំអាចបង្កើតទីតាំងកសិដ្ឋានរបស់ខ្ញុំដោយរបៀបណា?</string>
    <string name="str_527c996f">សំណួរដែលគេសួរញឹកញាប់</string>
    <string name="telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="str_83c05bb7">តាមដានពួកយើងនៅលើបណ្តាញសង្គម</string>
    <string name="str_fd96f68d">បណ្តាញសង្គម</string>
    <string name="str_15e04ef3">ចុច</string>
    <string name="str_6077be5a">ផ្លូវត្រឡោកបែក រាជធានីភ្នំពេញ</string>
    <string name="str_ad50f9cd">ទីតាំង</string>
    <string name="str_5a3c1eb2">+៨៥៥ ២៣ ៩៩៩ ៩៩៩</string>
    <string name="str_fc521e3f">ទូរស័ព្ទ</string>
    <string name="info_baydigitals_com">info@baydigitals.com</string>
    <string name="str_a9a5c161">អ៊ីមែល</string>
    <string name="str_2cbe5965">ព័ត៌មានទំនាក់ទំនង</string>
    <string name="str_bccd4ef4">យើងតែងតែរីករាយក្នុងការជួបជាមួយអ្នក!</string>
    <string name="str_8e0e99c7">ទំនាក់ទំនងពួកយើង</string>
    <string name="str_a638ac38">រូបតំណាងទំនាក់ទំនង</string>
    <string name="str_0b4b2c80">រក្សាទុកកំណត់ត្រា</string>
    <string name="str_753cb436">បោះបង់</string>
    <string name="str_12_2024">12 កញ្ញា 2024</string>
    <string name="str_f6068519">និពន្ធដោយ: សំណាង</string>
    <string name="str_b2b05e2b">បច្ចេកទេសសំខាន់ៗចំនួន ៨ ដើម្បីបង្កើនផលិតភាពដំណាំក្នុងវិស័យកសិកម្ម</string>
    <string name="str_709892e7">ការដាំដុះ</string>
    <string name="str_fd6d9fbb">សរសេរមតិរបស់អ្នកនៅទីនេះ...</string>
    <string name="str_c29372ce">មតិរបស់អ្នក</string>
    <string name="str_5_stars">5 stars</string>
    <string name="str_4_stars">4 stars</string>
    <string name="str_3_stars">3 stars</string>
    <string name="str_2_stars">2 stars</string>
    <string name="str_1_star">1 star</string>
    <string name="str_06c485ce">ជ្រើសរើសការវាយតម្លៃ</string>
    <string name="str_0591e1fa">អានអត្តបទ</string>
    <string name="str_1bd645b7">ការដាំដំណាំចម្រុះ ការដាំដំណាំចម្រុះ ជាវិធីមួយដ៏ល្អសម្រាប់អ្នកមានដីតិច អាចដាំបន្លែបានច្រើនប្រភេទ។ លោក ទក់ សុខា កសិករនៅខេត្តសៀមរាប បានលើកឡើងថា ការដាំដំណាំចម្រុះនេះ ជាវិធីមួយដ៏ល្អសម្រាប់អ្នកមានដីតិច អាចដាំបន្លែបានច្រើនប្រភេទ។ លោក ទក់ សុខា កសិករនៅខេត្តសៀមរាប បានលើកឡើងថា ការដាំដំណាំចម្រុះនេះ...</string>
</resources>