<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/kantumruypro_medium"
            android:text="@string/str_06c485ce"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivStar1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/str_1_star"
                android:src="@drawable/ic_star_unfilled" />

            <ImageView
                android:id="@+id/ivStar2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/str_2_stars"
                android:src="@drawable/ic_star_unfilled" />

            <ImageView
                android:id="@+id/ivStar3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/str_3_stars"
                android:src="@drawable/ic_star_unfilled" />

            <ImageView
                android:id="@+id/ivStar4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/str_4_stars"
                android:src="@drawable/ic_star_unfilled" />

            <ImageView
                android:id="@+id/ivStar5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/str_5_stars"
                android:src="@drawable/ic_star_unfilled" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/kantumruypro_medium"
            android:text="@string/str_c29372ce"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fontFamily="@font/kantumruypro_regular"
                android:gravity="top"
                android:hint="@string/str_fd6d9fbb"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>