<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kantumruypro_semibold"
        android:text="@string/str_72d288df"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/primary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_location"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_6919b732"
        android:drawablePadding="8dp"
        android:fontFamily="@font/kantumruypro_medium"
        android:textColor="@color/textColor"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_my_locations"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kantumruypro_medium"
        android:textColor="@color/textColor"
        android:text="@string/str_62d48446"
        android:drawablePadding="8dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>